--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
      <ul>
-         <li>Vagrant</li>
+         <li>Vagrant: Gerenciando maquínas virtuales</li>
          <li>Docker: Creando containers sin dolor de cabeza</li>
          <li>Ansible</li>
          <li>Integración continua: Desarrollo de Software</li>
